[project]
name = "aionode"
version = "0.1.0"
description = "Lightweight asyncio task tracking as call tree and DAG"
readme = "README.md"
authors = [
    { name = "Matteo De Pellegrin", email = "matteo.dep97@gmail.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/MatteoDep/aionode"
Issues = "https://github.com/MatteoDep/aionode/issues"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests
